github_data_collector/src/data/issue_comment/HaikuTeam_core.txt
Checking out master and running demos gives,

```
bash-3.2$ yarn install
bash-3.2$ yarn compile
bash-3.2$ yarn demos
yarn run v1.15.2
$ yarn ts ./scripts/demos.ts
$ cross-env NODE_ENV=test ts-node -r tsconfig-paths/register -P tsconfig.all.json ./scripts/demos.ts

.../core/node_modules/ts-node/src/index.ts:253
    return new TSError(diagnosticText, diagnosticCodes)
           ^
TSError: тип Unable to compile TypeScript:
scripts/demos.ts(19,3): error TS2345: Argument of type '{ stdio: string; cwd: string; }' is not assignable to parameter of type 'SpawnOptions'.
  Types of property 'stdio' are incompatible.
    Type 'string' is not assignable to type 'StdioOptions'.

    at createTSError (.../core/node_modules/ts-node/src/index.ts:253:12)
    at getOutput (.../core/node_modules/ts-node/src/index.ts:363:40)
    at Object.compile (.../core/node_modules/ts-node/src/index.ts:551:11)
    at Module.m._compile (.../core/node_modules/ts-node/src/index.ts:435:43)
    at Module._extensions..js (internal/modules/cjs/loader.js:732:10)
    at Object.require.extensions.(anonymous function) [as .ts] (.../core/node_modules/ts-node/src/index.ts:438:12)
    at Module.load (internal/modules/cjs/loader.js:620:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:560:12)
    at Function.Module._load (internal/modules/cjs/loader.js:552:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:774:12)
error Command failed with exit code 1.
info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
error Command failed with exit code 1.
info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command
```
yet all tests pass successfully.
Hi Haiku,

I'm using Haiku for Mac, and would like to know if custom style css could be added to elements, just like cursor, z-index, and so on. One example would be "fill" attribute for svgs. Example: angry state could result in my character being red instead of black. I tried to manually add it into code.js, but it didn't change anything.

Thank you!
Thanks for such a nice concept. 

The problem is all changes get auto-saved by clicking Back Arrow ( Next to Haiku Logo )

It would be great if you Haiku UI can provide git versions to revert back/ or Alert user should change be auto saved.

Currently, the only workaround is Developer > Open in Terminal > $git reset --hard HEAD~1
Thanks for such a nice concept. It would be great if you Haiku can retain the position of sketch elements.

Currently, the only workaround is copy pasting  Sketch - Position > X to Haiku - Position X which is not effective for multiple Slices


Hi,

Just tried the app and can't make it work with some SVG files.

## Description of the bug

Tried to scale an imported SVG file through the main view but it keep throwing me errors.
Everytime I try to close the errors, a new one comes.
Also, while I'm getting those errors, I can't do anything on the rest of the app except closing the errors.

## How to reproduce

I drag-dropped this simple SVG file in the Haiku view:
```
<svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0 0 268.5 319.2">
  <path fill="#92c9ed" d="M134.256 242.731c-58.7 0-106.3-47.6-106.3-106.3 0-58.7 47.6-106.3 106.3-106.3s106.3 47.6 106.3 106.3c0 58.7-47.6 106.3-106.3 106.3m134.3-108.5c0-74.2-60.1-134.3-134.3-134.3-74.2 0-134.3 60.1-134.3 134.3 0 59.1 38.2 109.4 91.4 127.3l42.9 57.7 42.9-57.7h-.1c53.2-17.9 91.5-68.1 91.5-127.3"/>
</svg>
```

Throw these errors:

<img width="347" alt="s1" src="https://user-images.githubusercontent.com/2766008/36859222-f6a8a8a6-1d7d-11e8-9e4f-166b03f9502e.png">


Version: 
OS: macOS 10.13.3
App version: 3.1.4